parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> script
Rule 1     script -> rooms
Rule 2     rooms -> rooms room
Rule 3     rooms -> room
Rule 4     room -> ROOM ID LBRACE stmts RBRACE
Rule 5     stmts -> stmts stmt
Rule 6     stmts -> stmt
Rule 7     stmt -> TEXT STRING
Rule 8     stmt -> CHOICE STRING ARROW ID
Rule 9     stmt -> ENEMY STRING ID NUMBER
Rule 10    stmt -> ATTACK
Rule 11    stmt -> GOTO ID

Terminals, with rules where they appear

ARROW                : 8
ATTACK               : 10
CHOICE               : 8
ENEMY                : 9
GOTO                 : 11
ID                   : 4 8 9 11
LBRACE               : 4
NUMBER               : 9
RBRACE               : 4
ROOM                 : 4
STRING               : 7 8 9
TEXT                 : 7
error                : 

Nonterminals, with rules where they appear

room                 : 2 3
rooms                : 1 2
script               : 0
stmt                 : 5 6
stmts                : 4 5

Parsing method: LALR

state 0

    (0) S' -> . script
    (1) script -> . rooms
    (2) rooms -> . rooms room
    (3) rooms -> . room
    (4) room -> . ROOM ID LBRACE stmts RBRACE

    ROOM            shift and go to state 4

    script                         shift and go to state 1
    rooms                          shift and go to state 2
    room                           shift and go to state 3

state 1

    (0) S' -> script .



state 2

    (1) script -> rooms .
    (2) rooms -> rooms . room
    (4) room -> . ROOM ID LBRACE stmts RBRACE

    $end            reduce using rule 1 (script -> rooms .)
    ROOM            shift and go to state 4

    room                           shift and go to state 5

state 3

    (3) rooms -> room .

    ROOM            reduce using rule 3 (rooms -> room .)
    $end            reduce using rule 3 (rooms -> room .)


state 4

    (4) room -> ROOM . ID LBRACE stmts RBRACE

    ID              shift and go to state 6


state 5

    (2) rooms -> rooms room .

    ROOM            reduce using rule 2 (rooms -> rooms room .)
    $end            reduce using rule 2 (rooms -> rooms room .)


state 6

    (4) room -> ROOM ID . LBRACE stmts RBRACE

    LBRACE          shift and go to state 7


state 7

    (4) room -> ROOM ID LBRACE . stmts RBRACE
    (5) stmts -> . stmts stmt
    (6) stmts -> . stmt
    (7) stmt -> . TEXT STRING
    (8) stmt -> . CHOICE STRING ARROW ID
    (9) stmt -> . ENEMY STRING ID NUMBER
    (10) stmt -> . ATTACK
    (11) stmt -> . GOTO ID

    TEXT            shift and go to state 10
    CHOICE          shift and go to state 11
    ENEMY           shift and go to state 12
    ATTACK          shift and go to state 13
    GOTO            shift and go to state 14

    stmts                          shift and go to state 8
    stmt                           shift and go to state 9

state 8

    (4) room -> ROOM ID LBRACE stmts . RBRACE
    (5) stmts -> stmts . stmt
    (7) stmt -> . TEXT STRING
    (8) stmt -> . CHOICE STRING ARROW ID
    (9) stmt -> . ENEMY STRING ID NUMBER
    (10) stmt -> . ATTACK
    (11) stmt -> . GOTO ID

    RBRACE          shift and go to state 15
    TEXT            shift and go to state 10
    CHOICE          shift and go to state 11
    ENEMY           shift and go to state 12
    ATTACK          shift and go to state 13
    GOTO            shift and go to state 14

    stmt                           shift and go to state 16

state 9

    (6) stmts -> stmt .

    RBRACE          reduce using rule 6 (stmts -> stmt .)
    TEXT            reduce using rule 6 (stmts -> stmt .)
    CHOICE          reduce using rule 6 (stmts -> stmt .)
    ENEMY           reduce using rule 6 (stmts -> stmt .)
    ATTACK          reduce using rule 6 (stmts -> stmt .)
    GOTO            reduce using rule 6 (stmts -> stmt .)


state 10

    (7) stmt -> TEXT . STRING

    STRING          shift and go to state 17


state 11

    (8) stmt -> CHOICE . STRING ARROW ID

    STRING          shift and go to state 18


state 12

    (9) stmt -> ENEMY . STRING ID NUMBER

    STRING          shift and go to state 19


state 13

    (10) stmt -> ATTACK .

    RBRACE          reduce using rule 10 (stmt -> ATTACK .)
    TEXT            reduce using rule 10 (stmt -> ATTACK .)
    CHOICE          reduce using rule 10 (stmt -> ATTACK .)
    ENEMY           reduce using rule 10 (stmt -> ATTACK .)
    ATTACK          reduce using rule 10 (stmt -> ATTACK .)
    GOTO            reduce using rule 10 (stmt -> ATTACK .)


state 14

    (11) stmt -> GOTO . ID

    ID              shift and go to state 20


state 15

    (4) room -> ROOM ID LBRACE stmts RBRACE .

    ROOM            reduce using rule 4 (room -> ROOM ID LBRACE stmts RBRACE .)
    $end            reduce using rule 4 (room -> ROOM ID LBRACE stmts RBRACE .)


state 16

    (5) stmts -> stmts stmt .

    RBRACE          reduce using rule 5 (stmts -> stmts stmt .)
    TEXT            reduce using rule 5 (stmts -> stmts stmt .)
    CHOICE          reduce using rule 5 (stmts -> stmts stmt .)
    ENEMY           reduce using rule 5 (stmts -> stmts stmt .)
    ATTACK          reduce using rule 5 (stmts -> stmts stmt .)
    GOTO            reduce using rule 5 (stmts -> stmts stmt .)


state 17

    (7) stmt -> TEXT STRING .

    RBRACE          reduce using rule 7 (stmt -> TEXT STRING .)
    TEXT            reduce using rule 7 (stmt -> TEXT STRING .)
    CHOICE          reduce using rule 7 (stmt -> TEXT STRING .)
    ENEMY           reduce using rule 7 (stmt -> TEXT STRING .)
    ATTACK          reduce using rule 7 (stmt -> TEXT STRING .)
    GOTO            reduce using rule 7 (stmt -> TEXT STRING .)


state 18

    (8) stmt -> CHOICE STRING . ARROW ID

    ARROW           shift and go to state 21


state 19

    (9) stmt -> ENEMY STRING . ID NUMBER

    ID              shift and go to state 22


state 20

    (11) stmt -> GOTO ID .

    RBRACE          reduce using rule 11 (stmt -> GOTO ID .)
    TEXT            reduce using rule 11 (stmt -> GOTO ID .)
    CHOICE          reduce using rule 11 (stmt -> GOTO ID .)
    ENEMY           reduce using rule 11 (stmt -> GOTO ID .)
    ATTACK          reduce using rule 11 (stmt -> GOTO ID .)
    GOTO            reduce using rule 11 (stmt -> GOTO ID .)


state 21

    (8) stmt -> CHOICE STRING ARROW . ID

    ID              shift and go to state 23


state 22

    (9) stmt -> ENEMY STRING ID . NUMBER

    NUMBER          shift and go to state 24


state 23

    (8) stmt -> CHOICE STRING ARROW ID .

    RBRACE          reduce using rule 8 (stmt -> CHOICE STRING ARROW ID .)
    TEXT            reduce using rule 8 (stmt -> CHOICE STRING ARROW ID .)
    CHOICE          reduce using rule 8 (stmt -> CHOICE STRING ARROW ID .)
    ENEMY           reduce using rule 8 (stmt -> CHOICE STRING ARROW ID .)
    ATTACK          reduce using rule 8 (stmt -> CHOICE STRING ARROW ID .)
    GOTO            reduce using rule 8 (stmt -> CHOICE STRING ARROW ID .)


state 24

    (9) stmt -> ENEMY STRING ID NUMBER .

    RBRACE          reduce using rule 9 (stmt -> ENEMY STRING ID NUMBER .)
    TEXT            reduce using rule 9 (stmt -> ENEMY STRING ID NUMBER .)
    CHOICE          reduce using rule 9 (stmt -> ENEMY STRING ID NUMBER .)
    ENEMY           reduce using rule 9 (stmt -> ENEMY STRING ID NUMBER .)
    ATTACK          reduce using rule 9 (stmt -> ENEMY STRING ID NUMBER .)
    GOTO            reduce using rule 9 (stmt -> ENEMY STRING ID NUMBER .)

